HW-11: Added tasks and updated code to run these tasks